// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthDetails renders all deployments down 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthDetails
    headline=""
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 0,
            "name": "A",
            "replicas": 0,
          },
          Object {
            "available": 0,
            "name": "B",
            "replicas": 0,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "defaultOverlayShown": false,
      "overlay": <Tooltip
        bsClass="tooltip"
        placement="right"
      >
        <div
          style={
            Object {
              "paddingBottom": 10,
              "paddingLeft": 15,
              "paddingRight": 15,
            }
          }
        >
          <div>
            <h4>
              
            </h4>
          </div>
          <div>
            <strong>
              <Icon
                name="error-circle-o"
                type="pf"
              />
                Deployments status:
            </strong>
            <ul
              style={
                Object {
                  "listStyleType": "none",
                  "paddingLeft": 12,
                }
              }
            >
              <li>
                <span
                  style={
                    Object {
                      "color": "#707070",
                    }
                  }
                >
                  N/A
                </span>
                 
                A
                 (
                0
                 / 
                0
                )
              </li>
              <li>
                <span
                  style={
                    Object {
                      "color": "#707070",
                    }
                  }
                >
                  N/A
                </span>
                 
                B
                 (
                0
                 / 
                0
                )
              </li>
            </ul>
            <strong>
              <Icon
                name="ok"
                type="pf"
              />
                Envoy health
            </strong>
             (
            1
             / 
            1
            )
          </div>
        </div>
      </Tooltip>,
      "placement": "right",
      "rootClose": false,
      "trigger": Array [
        "hover",
        "focus",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "defaultOverlayShown": false,
        "overlay": <Tooltip
          bsClass="tooltip"
          placement="right"
        >
          <div
            style={
              Object {
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
              }
            }
          >
            <div>
              <h4>
                
              </h4>
            </div>
            <div>
              <strong>
                <Icon
                  name="error-circle-o"
                  type="pf"
                />
                  Deployments status:
              </strong>
              <ul
                style={
                  Object {
                    "listStyleType": "none",
                    "paddingLeft": 12,
                  }
                }
              >
                <li>
                  <span
                    style={
                      Object {
                        "color": "#707070",
                      }
                    }
                  >
                    N/A
                  </span>
                   
                  A
                   (
                  0
                   / 
                  0
                  )
                </li>
                <li>
                  <span
                    style={
                      Object {
                        "color": "#707070",
                      }
                    }
                  >
                    N/A
                  </span>
                   
                  B
                   (
                  0
                   / 
                  0
                  )
                </li>
              </ul>
              <strong>
                <Icon
                  name="ok"
                  type="pf"
                />
                  Envoy health
              </strong>
               (
              1
               / 
              1
              )
            </div>
          </div>
        </Tooltip>,
        "placement": "right",
        "rootClose": false,
        "trigger": Array [
          "hover",
          "focus",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HealthDetails renders deployments degraded 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthDetails
    headline=""
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "name": "A",
            "replicas": 10,
          },
          Object {
            "available": 2,
            "name": "B",
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "defaultOverlayShown": false,
      "overlay": <Tooltip
        bsClass="tooltip"
        placement="right"
      >
        <div
          style={
            Object {
              "paddingBottom": 10,
              "paddingLeft": 15,
              "paddingRight": 15,
            }
          }
        >
          <div>
            <h4>
              
            </h4>
          </div>
          <div>
            <strong>
              <Icon
                name="warning-triangle-o"
                type="pf"
              />
                Deployments status:
            </strong>
            <ul
              style={
                Object {
                  "listStyleType": "none",
                  "paddingLeft": 12,
                }
              }
            >
              <li>
                <Icon
                  name="warning-triangle-o"
                  type="pf"
                />
                 
                A
                 (
                1
                 / 
                10
                )
              </li>
              <li>
                <Icon
                  name="ok"
                  type="pf"
                />
                 
                B
                 (
                2
                 / 
                2
                )
              </li>
            </ul>
            <strong>
              <Icon
                name="ok"
                type="pf"
              />
                Envoy health
            </strong>
             (
            1
             / 
            1
            )
          </div>
        </div>
      </Tooltip>,
      "placement": "right",
      "rootClose": false,
      "trigger": Array [
        "hover",
        "focus",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "defaultOverlayShown": false,
        "overlay": <Tooltip
          bsClass="tooltip"
          placement="right"
        >
          <div
            style={
              Object {
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
              }
            }
          >
            <div>
              <h4>
                
              </h4>
            </div>
            <div>
              <strong>
                <Icon
                  name="warning-triangle-o"
                  type="pf"
                />
                  Deployments status:
              </strong>
              <ul
                style={
                  Object {
                    "listStyleType": "none",
                    "paddingLeft": 12,
                  }
                }
              >
                <li>
                  <Icon
                    name="warning-triangle-o"
                    type="pf"
                  />
                   
                  A
                   (
                  1
                   / 
                  10
                  )
                </li>
                <li>
                  <Icon
                    name="ok"
                    type="pf"
                  />
                   
                  B
                   (
                  2
                   / 
                  2
                  )
                </li>
              </ul>
              <strong>
                <Icon
                  name="ok"
                  type="pf"
                />
                  Envoy health
              </strong>
               (
              1
               / 
              1
              )
            </div>
          </div>
        </Tooltip>,
        "placement": "right",
        "rootClose": false,
        "trigger": Array [
          "hover",
          "focus",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HealthDetails renders deployments failure 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthDetails
    headline=""
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 0,
            "name": "A",
            "replicas": 10,
          },
          Object {
            "available": 2,
            "name": "B",
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 10,
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "defaultOverlayShown": false,
      "overlay": <Tooltip
        bsClass="tooltip"
        placement="right"
      >
        <div
          style={
            Object {
              "paddingBottom": 10,
              "paddingLeft": 15,
              "paddingRight": 15,
            }
          }
        >
          <div>
            <h4>
              
            </h4>
          </div>
          <div>
            <strong>
              <Icon
                name="error-circle-o"
                type="pf"
              />
                Deployments status:
            </strong>
            <ul
              style={
                Object {
                  "listStyleType": "none",
                  "paddingLeft": 12,
                }
              }
            >
              <li>
                <Icon
                  name="error-circle-o"
                  type="pf"
                />
                 
                A
                 (
                0
                 / 
                10
                )
              </li>
              <li>
                <Icon
                  name="ok"
                  type="pf"
                />
                 
                B
                 (
                2
                 / 
                2
                )
              </li>
            </ul>
            <strong>
              <Icon
                name="warning-triangle-o"
                type="pf"
              />
                Envoy health
            </strong>
             (
            1
             / 
            10
            )
          </div>
        </div>
      </Tooltip>,
      "placement": "right",
      "rootClose": false,
      "trigger": Array [
        "hover",
        "focus",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "defaultOverlayShown": false,
        "overlay": <Tooltip
          bsClass="tooltip"
          placement="right"
        >
          <div
            style={
              Object {
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
              }
            }
          >
            <div>
              <h4>
                
              </h4>
            </div>
            <div>
              <strong>
                <Icon
                  name="error-circle-o"
                  type="pf"
                />
                  Deployments status:
              </strong>
              <ul
                style={
                  Object {
                    "listStyleType": "none",
                    "paddingLeft": 12,
                  }
                }
              >
                <li>
                  <Icon
                    name="error-circle-o"
                    type="pf"
                  />
                   
                  A
                   (
                  0
                   / 
                  10
                  )
                </li>
                <li>
                  <Icon
                    name="ok"
                    type="pf"
                  />
                   
                  B
                   (
                  2
                   / 
                  2
                  )
                </li>
              </ul>
              <strong>
                <Icon
                  name="warning-triangle-o"
                  type="pf"
                />
                  Envoy health
              </strong>
               (
              1
               / 
              10
              )
            </div>
          </div>
        </Tooltip>,
        "placement": "right",
        "rootClose": false,
        "trigger": Array [
          "hover",
          "focus",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HealthDetails renders envoy degraded 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthDetails
    headline=""
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "name": "A",
            "replicas": 1,
          },
          Object {
            "available": 2,
            "name": "B",
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 10,
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "defaultOverlayShown": false,
      "overlay": <Tooltip
        bsClass="tooltip"
        placement="right"
      >
        <div
          style={
            Object {
              "paddingBottom": 10,
              "paddingLeft": 15,
              "paddingRight": 15,
            }
          }
        >
          <div>
            <h4>
              
            </h4>
          </div>
          <div>
            <strong>
              <Icon
                name="ok"
                type="pf"
              />
                Deployments status:
            </strong>
            <ul
              style={
                Object {
                  "listStyleType": "none",
                  "paddingLeft": 12,
                }
              }
            >
              <li>
                <Icon
                  name="ok"
                  type="pf"
                />
                 
                A
                 (
                1
                 / 
                1
                )
              </li>
              <li>
                <Icon
                  name="ok"
                  type="pf"
                />
                 
                B
                 (
                2
                 / 
                2
                )
              </li>
            </ul>
            <strong>
              <Icon
                name="warning-triangle-o"
                type="pf"
              />
                Envoy health
            </strong>
             (
            1
             / 
            10
            )
          </div>
        </div>
      </Tooltip>,
      "placement": "right",
      "rootClose": false,
      "trigger": Array [
        "hover",
        "focus",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "defaultOverlayShown": false,
        "overlay": <Tooltip
          bsClass="tooltip"
          placement="right"
        >
          <div
            style={
              Object {
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
              }
            }
          >
            <div>
              <h4>
                
              </h4>
            </div>
            <div>
              <strong>
                <Icon
                  name="ok"
                  type="pf"
                />
                  Deployments status:
              </strong>
              <ul
                style={
                  Object {
                    "listStyleType": "none",
                    "paddingLeft": 12,
                  }
                }
              >
                <li>
                  <Icon
                    name="ok"
                    type="pf"
                  />
                   
                  A
                   (
                  1
                   / 
                  1
                  )
                </li>
                <li>
                  <Icon
                    name="ok"
                    type="pf"
                  />
                   
                  B
                   (
                  2
                   / 
                  2
                  )
                </li>
              </ul>
              <strong>
                <Icon
                  name="warning-triangle-o"
                  type="pf"
                />
                  Envoy health
              </strong>
               (
              1
               / 
              10
              )
            </div>
          </div>
        </Tooltip>,
        "placement": "right",
        "rootClose": false,
        "trigger": Array [
          "hover",
          "focus",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HealthDetails renders envoy failure 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthDetails
    headline=""
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "name": "A",
            "replicas": 10,
          },
          Object {
            "available": 2,
            "name": "B",
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 0,
          "total": 10,
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "defaultOverlayShown": false,
      "overlay": <Tooltip
        bsClass="tooltip"
        placement="right"
      >
        <div
          style={
            Object {
              "paddingBottom": 10,
              "paddingLeft": 15,
              "paddingRight": 15,
            }
          }
        >
          <div>
            <h4>
              
            </h4>
          </div>
          <div>
            <strong>
              <Icon
                name="warning-triangle-o"
                type="pf"
              />
                Deployments status:
            </strong>
            <ul
              style={
                Object {
                  "listStyleType": "none",
                  "paddingLeft": 12,
                }
              }
            >
              <li>
                <Icon
                  name="warning-triangle-o"
                  type="pf"
                />
                 
                A
                 (
                1
                 / 
                10
                )
              </li>
              <li>
                <Icon
                  name="ok"
                  type="pf"
                />
                 
                B
                 (
                2
                 / 
                2
                )
              </li>
            </ul>
            <strong>
              <Icon
                name="error-circle-o"
                type="pf"
              />
                Envoy health
            </strong>
             (
            0
             / 
            10
            )
          </div>
        </div>
      </Tooltip>,
      "placement": "right",
      "rootClose": false,
      "trigger": Array [
        "hover",
        "focus",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "defaultOverlayShown": false,
        "overlay": <Tooltip
          bsClass="tooltip"
          placement="right"
        >
          <div
            style={
              Object {
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
              }
            }
          >
            <div>
              <h4>
                
              </h4>
            </div>
            <div>
              <strong>
                <Icon
                  name="warning-triangle-o"
                  type="pf"
                />
                  Deployments status:
              </strong>
              <ul
                style={
                  Object {
                    "listStyleType": "none",
                    "paddingLeft": 12,
                  }
                }
              >
                <li>
                  <Icon
                    name="warning-triangle-o"
                    type="pf"
                  />
                   
                  A
                   (
                  1
                   / 
                  10
                  )
                </li>
                <li>
                  <Icon
                    name="ok"
                    type="pf"
                  />
                   
                  B
                   (
                  2
                   / 
                  2
                  )
                </li>
              </ul>
              <strong>
                <Icon
                  name="error-circle-o"
                  type="pf"
                />
                  Envoy health
              </strong>
               (
              0
               / 
              10
              )
            </div>
          </div>
        </Tooltip>,
        "placement": "right",
        "rootClose": false,
        "trigger": Array [
          "hover",
          "focus",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`HealthDetails renders healthy 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HealthDetails
    headline=""
    health={
      Object {
        "deploymentStatuses": Array [
          Object {
            "available": 1,
            "name": "A",
            "replicas": 1,
          },
          Object {
            "available": 2,
            "name": "B",
            "replicas": 2,
          },
        ],
        "envoy": Object {
          "healthy": 1,
          "total": 1,
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "defaultOverlayShown": false,
      "overlay": <Tooltip
        bsClass="tooltip"
        placement="right"
      >
        <div
          style={
            Object {
              "paddingBottom": 10,
              "paddingLeft": 15,
              "paddingRight": 15,
            }
          }
        >
          <div>
            <h4>
              
            </h4>
          </div>
          <div>
            <strong>
              <Icon
                name="ok"
                type="pf"
              />
                Deployments status:
            </strong>
            <ul
              style={
                Object {
                  "listStyleType": "none",
                  "paddingLeft": 12,
                }
              }
            >
              <li>
                <Icon
                  name="ok"
                  type="pf"
                />
                 
                A
                 (
                1
                 / 
                1
                )
              </li>
              <li>
                <Icon
                  name="ok"
                  type="pf"
                />
                 
                B
                 (
                2
                 / 
                2
                )
              </li>
            </ul>
            <strong>
              <Icon
                name="ok"
                type="pf"
              />
                Envoy health
            </strong>
             (
            1
             / 
            1
            )
          </div>
        </div>
      </Tooltip>,
      "placement": "right",
      "rootClose": false,
      "trigger": Array [
        "hover",
        "focus",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "defaultOverlayShown": false,
        "overlay": <Tooltip
          bsClass="tooltip"
          placement="right"
        >
          <div
            style={
              Object {
                "paddingBottom": 10,
                "paddingLeft": 15,
                "paddingRight": 15,
              }
            }
          >
            <div>
              <h4>
                
              </h4>
            </div>
            <div>
              <strong>
                <Icon
                  name="ok"
                  type="pf"
                />
                  Deployments status:
              </strong>
              <ul
                style={
                  Object {
                    "listStyleType": "none",
                    "paddingLeft": 12,
                  }
                }
              >
                <li>
                  <Icon
                    name="ok"
                    type="pf"
                  />
                   
                  A
                   (
                  1
                   / 
                  1
                  )
                </li>
                <li>
                  <Icon
                    name="ok"
                    type="pf"
                  />
                   
                  B
                   (
                  2
                   / 
                  2
                  )
                </li>
              </ul>
              <strong>
                <Icon
                  name="ok"
                  type="pf"
                />
                  Envoy health
              </strong>
               (
              1
               / 
              1
              )
            </div>
          </div>
        </Tooltip>,
        "placement": "right",
        "rootClose": false,
        "trigger": Array [
          "hover",
          "focus",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
